--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ main section:not(:last-child) {
   border-bottom: 1px solid #ccc;
 }
 
-.fab {
+.fas, .fab {
   border: 1px solid white;
   border-radius: 50%;
   font-size: 1.5em;
@@ -80,7 +80,7 @@ main section:not(:last-child) {
   text-align: center;
 }
 
-a .fab {
+a .fas, .fab {
   color: white;
 }
 
@@ -109,7 +109,7 @@ a .fab {
 }
 
 .skills .column {
-  -ms-flex: 0 0 50%%;
+  -ms-flex: 0 0 50%;
   flex: 0 0 50%;
   max-width: 50%;
 }
