--- a/style.css
+++ b/style.css
@@ -84,27 +84,27 @@ a .fas, .fab {
   color: white;
 }
 
-.course, .skills {
+.certification, .skills {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
-.course .title {
+.certification .title {
   color: #509e98;
   -ms-flex: 0 0 33.3%;
   flex: 0 0 33.3%;
   max-width: 33%;
 }
 
-.course .descrition {
+.certification .descrition {
   -ms-flex: 0 0 66.6%;
   flex: 0 0 66.6%;
   max-width: 66.6%;
 }
 
-.course .descrition p {
+.certification .descrition p {
   padding-left: 1em;
 }
 
