--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 a {
-  color: #1C9C94;
+  color: #27556D;
   text-decoration: none;
 }
 
@@ -92,7 +92,7 @@ a .fas, .fab {
 }
 
 .certification .title {
-  color: #509e98;
+  color: #3D7891;
   -ms-flex: 0 0 33.3%;
   flex: 0 0 33.3%;
   max-width: 33%;
@@ -121,7 +121,7 @@ a .fas, .fab {
 .skills .column ul > li:before {
   content: "►";
   padding-right: 0.5em;
-  color: #509e98;
+  color: #3D7891;
 }
 
 .school, .job-title {
@@ -129,19 +129,19 @@ a .fas, .fab {
 }
 
 .school span, .job-title span {
-  color: #889499;
+  color: #27556D;
   text-decoration: underline;
 }
 
 ul.job-description li:before{
   content: "✔";
   padding-right: 0.5em;
-  color: #509e98;
+  color: #3D7891;
 }
 
 footer {
  padding: 1em 1.5em;
- background: #A7B8BF;
+ background: #0B192A;
  color: white;
  text-align: right;
 }
