--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ header, main, footer {
 header {
   padding: 2em;
   text-align: center;
-  background-image: url('./img/bg.jpg');
+  background-image: url('./img/background.jpg');
   background-size: cover;
   background-position: fixed;
   color: white;
@@ -46,6 +46,7 @@ header section {
 header img {
   border-radius: 50%;
   max-width: 150px;
+  border: 2px solid white;
 }
 
 h1 {
